[java] implement session methods with SauceREST library (#340)